--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Christmas</title>
+    <link rel="stylesheet" href="libs/Notifications/notifications.css">
     <style media="screen">
       html, body {
         margin: 0;
@@ -20,6 +21,7 @@
   </head>
   <body>
     <canvas id="main" height="1000" width="5000"></canvas>
+    <script src="libs/Notifications/notifications.js" charset="utf-8"></script>
     <script src="math.js" charset="utf-8"></script>
     <script src="GAME_MASTER.js"></script>
     <script src="Game.js" charset="utf-8"></script>
